@@ -2,7 +2,7 @@ sdparm (1.10-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 01 Feb 2016 23:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 09 Feb 2016 16:00:00 -0500
 
 sdparm (1.09-0.1) unstable; urgency=low
 
